--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="flex-container museo">
 
   
-  <div style="font-size: 20px;text-align: center; padding-right:50px; "><img src="img/skilL1.jpg" class="img-responsive" >(Robo soccer)</div>
+  <div style="font-size: 20px;text-align: center; padding-right:50px; "><img src="img/skill1.jpg" class="img-responsive" >(Robo soccer)</div>
 
   <div style="font-size: 20px;text-align: center; padding-left: 50px;"><img style=" width: 100%" src="img/iee1.jpg" class="img-responsive">(Raspberry Pi,Speed-o-Track)</div>
 
